# objectcreator

./: .gitignore  README.md  X97.CMC2O.parkobj  brightness.py  crown.parkobj  generate_surfaces.py  objects.py  palette.py  palette_data(old).py  palette_data.py  psD9AE.tmp  remap_mapping.npy  remap_strips.npy  remap_strips.psd  sprites.py  template.py  test.parkobj  tols.lndwll06.parkobj  untitled2.py  untitled4.py
.scenery_small.sa/: object.json
build_files/: auto-py-to-exe_editor.json  auto-py-to-exe_editor_updater.json  setup_editor.iss
customwidgets/: MANIFEST.in  README.rst  setup.cfg
customwidgets/customwidgets/: __init__.py
editor_app/: app.py  auto-py-to-exe_settings.json  auxiliaries.py  config.json  main_window.ui  resources.qrc  resources_rc.py  settingsSS.ui  settings_window.ui  sprite.ui  sprite_tab.ui  spritesSS.ui  test.py  updater.py  widgets.py  widgetsGeneric.py  widgetsLS.py  widgetsLSpy  widgetsSS.py
gui/: pathgenerator.ui
mainwindow/: colorcontrol.ui  customwidgets.py  editor.py  gui.py  objectmaker_smallScenery.ui  settingsSS.ui  spritesSS.ui  widgets.py
openrct2.terrain_surface.void/: object.json
path_generator/: OpenRCT2 Launcher.lnk  tols.rndgrndtxtr.parkobj  tols.scenery_large.test_full.parkobj
pathgenerator_app/: Neues Textdokument.txt  add_lib.py  app.py  config.json  generate_path.py  gui.py  importsprite.ui  pathgenerator.ui  resources.qrc  resources_rc.py  template.py  test.parkobj  tols.scenery_large.asd_round2x2in.parkobj
rctobject/: MANIFEST.in  README.rst  setup.cfg  setup.py
surfacegenerator/: generate_surfaces.py  (+1 more)
(+209 files in other folders)
