[metadata]
name = customwidgets
author = Tolsimir
version = 0.1
description = Package for widgets for the object maker
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
home_page = https://github.com/danielmeinert/objectmaker
project_urls =
    Issue Tracker = https://github.com/danielmeinert/objectmaker/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
install_requires =
    setuptools

[bdist_wheel]
universal = 1
